--- a/index.html
+++ b/index.html
@@ -144,57 +144,57 @@
 
             <div class="blog-carousel owl-theme owl-carousel">
 
-                <div class="item">
-                    <div class="single-blog-post">
-                        <div >
-                            <video   height="320"   controls autoplay >
-                                <source  src="https://vd4.bdstatic.com/mda-qcv9rys44ecvc1hb/540p/h264_cae/1711781619257129684/mda-qcv9rys44ecvc1hb.mp4" type="video/mp4">
-                                您的浏览器不支持Video标签。
-                            </video>
-                        </div>
-                        <div class="text-box">
-                            <a href="#"><h3>AI视频</h3></a>
-                            <p>AI制作普通话/粤语/英文视频</p>
-                            <div class="meta-info"> </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="single-blog-post">
-                        <div >
-                            <video id="video2"  height="320" controls autoplay  src="https://vd3.bdstatic.com/mda-qcv9i2h1w9jaxmjh/720p_frame30/h264_cae/1711781028113778249/mda-qcv9i2h1w9jaxmjh.mp4"></video>
-                        </div>
-                        <div class="text-box">
-                            <a href="#"><h3>AI视频</h3></a>
-                            <p>AI制作普通话/粤语/英文视频</p>
-                            <div class="meta-info"> </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="single-blog-post">
-                        <div >
-                            <video id="video3"  height="320" controls autoplay  src="https://vd2.bdstatic.com/mda-qcm30q2yffnq76ng/720p_frame30/h264_cae/1711073281010598827/mda-qcm30q2yffnq76ng.mp4"></video>
-                        </div>
-                        <div class="text-box">
-                            <a href="#"><h3>AI视频</h3></a>
-                            <p>AI制作普通话/粤语/英文视频</p>
-                            <div class="meta-info"> </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="single-blog-post">
-                        <div >
-                            <video id="video4"  height="320"  controls autoplay  src="https://vd3.bdstatic.com/mda-qcm33fjtcdpkvez6/720p_frame30/h264_cae/1711073492453435683/mda-qcm33fjtcdpkvez6.mp4"></video>
-                        </div>
-                        <div class="text-box">
-                            <a href="#"><h3>AI视频</h3></a>
-                            <p>AI制作普通话/粤语/英文视频</p>
-                            <div class="meta-info"> </div>
-                        </div>
-                    </div>
-                </div>
+<!--                <div class="item">-->
+<!--                    <div class="single-blog-post">-->
+<!--                        <div >-->
+<!--                            <video   height="320"   controls autoplay >-->
+<!--                                <source  src="https://vd4.bdstatic.com/mda-qcv9rys44ecvc1hb/540p/h264_cae/1711781619257129684/mda-qcv9rys44ecvc1hb.mp4" type="video/mp4">-->
+<!--                                您的浏览器不支持Video标签。-->
+<!--                            </video>-->
+<!--                        </div>-->
+<!--                        <div class="text-box">-->
+<!--                            <a href="#"><h3>AI视频</h3></a>-->
+<!--                            <p>AI制作普通话/粤语/英文视频</p>-->
+<!--                            <div class="meta-info"> </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="item">-->
+<!--                    <div class="single-blog-post">-->
+<!--                        <div >-->
+<!--                            <video id="video2"  height="320" controls autoplay  src="https://vd3.bdstatic.com/mda-qcv9i2h1w9jaxmjh/720p_frame30/h264_cae/1711781028113778249/mda-qcv9i2h1w9jaxmjh.mp4"></video>-->
+<!--                        </div>-->
+<!--                        <div class="text-box">-->
+<!--                            <a href="#"><h3>AI视频</h3></a>-->
+<!--                            <p>AI制作普通话/粤语/英文视频</p>-->
+<!--                            <div class="meta-info"> </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="item">-->
+<!--                    <div class="single-blog-post">-->
+<!--                        <div >-->
+<!--                            <video id="video3"  height="320" controls autoplay  src="https://vd2.bdstatic.com/mda-qcm30q2yffnq76ng/720p_frame30/h264_cae/1711073281010598827/mda-qcm30q2yffnq76ng.mp4"></video>-->
+<!--                        </div>-->
+<!--                        <div class="text-box">-->
+<!--                            <a href="#"><h3>AI视频</h3></a>-->
+<!--                            <p>AI制作普通话/粤语/英文视频</p>-->
+<!--                            <div class="meta-info"> </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="item">-->
+<!--                    <div class="single-blog-post">-->
+<!--                        <div >-->
+<!--                            <video id="video4"  height="320"  controls autoplay  src="https://vd3.bdstatic.com/mda-qcm33fjtcdpkvez6/720p_frame30/h264_cae/1711073492453435683/mda-qcm33fjtcdpkvez6.mp4"></video>-->
+<!--                        </div>-->
+<!--                        <div class="text-box">-->
+<!--                            <a href="#"><h3>AI视频</h3></a>-->
+<!--                            <p>AI制作普通话/粤语/英文视频</p>-->
+<!--                            <div class="meta-info"> </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
                 <div class="item">
                     <div class="single-blog-post">
                         <div class="img-box">
