--- a/index.html
+++ b/index.html
@@ -489,6 +489,7 @@
             <div class="container">
                 <div class="pull-left left-content">
                     <p>Copyright© 2024 <span class="sep">  </span> All Rights Reserved.AI合影</p>
+                    <p><a href="http://beian.miit.gov.cn/">工业和信息化部备案管理系统网站 粤ICP备2023104424号-2</a></p>
                 </div>
             </div>
         </div>
