--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
         <div class="container">
             <div class="sec-title text-center">
                <h2> <a class="a_font"  href="">AI制作</a></h2>
-                <p>🌷承接虚拟数字人制作<br/>🌹Al虛拟数字技术“复活”亲人🌺Al复活<br/>🌺让温情再续 让感动常在<br/>
-                    🌺定制AI照片，AI换脸写真</p>
+<!--                <p>🌷承接虚拟数字人制作<br/>🌹Al虛拟数字技术“复活”亲人🌺Al复活<br/>🌺让温情再续 让感动常在<br/>-->
+<!--                    🌺定制AI照片，AI换脸写真</p>-->
             </div>
 
             <div class="blog-carousel owl-theme owl-carousel">
@@ -198,48 +198,52 @@
                 <div class="item">
                     <div class="single-blog-post">
                         <div class="img-box">
-                            <img   height="320" src="https://pic.rmb.bdstatic.com/bjh/240404/gallery/59e4ed454e8d37c1dde9c1b9bab47ef05690.jpeg"
+                            <img   height="320" src="https://mmbiz.qpic.cn/mmbiz_png/ia3CGiclWpYDg9PbSicDZfXe4ns2h8efhIKOUpuUNTS9onibic7cOibD8ZGM5seSAZib4jicqx2TLib6uW0fKuqLyb0SoVw/"
+                                   class="attachment-appilo_367x195 size-appilo_367x195 wp-post-image" alt=""/></div>
+                        <div class="text-box">
+                            <h3>（AI换脸）不一样的烟火</h3>
+                            <p>价格：￥1.00元    </p>
+                            <button style="color: #ff9017;border-color:gold">立即购买</button>
+                            <div class="meta-info">产品介绍：上传你的照片，生成换脸照片</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="single-blog-post">
+                        <div class="img-box">
+                            <img   height="320" src="https://mmbiz.qpic.cn/mmbiz_png/ia3CGiclWpYDg9PbSicDZfXe4ns2h8efhIKej5W6GRk7mG7kIiaJmDIkm9eAYAvGgmGstaTDJqRam9bThEpCFC9VzQ/"
+                                   class="attachment-appilo_367x195 size-appilo_367x195 wp-post-image" alt=""/></div>
+                        <div class="text-box">
+                            <h3>（AI换脸）烟火</h3>
+                            <p>价格：￥1.00元    </p>
+                            <button style="color: #ff9017;border-color:gold">立即购买</button>
+                            <div class="meta-info">产品介绍：上传你的照片，生成换脸照片</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="single-blog-post">
+                        <div class="img-box">
+                            <img   height="320" src="https://mmbiz.qpic.cn/mmbiz_jpg/ia3CGiclWpYDgIQNiaFdpp8zp69qg6COotbY0FneQ4RLTBgCbcWZMUEYicwLXVXt8bAnIficCrykZQ0nKoYuCQmycOA/"
                                  class="attachment-appilo_367x195 size-appilo_367x195 wp-post-image" alt=""/></div>
                         <div class="text-box">
-                          <h3>泳池邂逅</h3>
-                            <p>AI换脸照片</p>
-                            <div class="meta-info"> </div>
+                          <h3>（AI换脸）晨曦佳人</h3>
+                            <p>价格：￥1.00元    </p>
+                            <button style="color: #ff9017;border-color:gold">立即购买</button>
+                            <div class="meta-info">产品介绍：上传你的照片，生成换脸照片</div>
                         </div>
                     </div>
                 </div>
                 <div class="item">
                     <div class="single-blog-post">
                         <div class="img-box">
-                            <img   height="320" src="https://pic.rmb.bdstatic.com/bjh/240404/gallery/95b482e95a5feaf9a24ece451e60a2109236.jpeg"
+                            <img   height="320" src="https://mmbiz.qpic.cn/mmbiz_jpg/ia3CGiclWpYDgp1L7CeRblqdwich6njZkzXTkc1rAq70E1eG8hKmL5u1JYfiaVuibohMagtVt3YqvX1g7VFk4OB9YaQ/"
                                    class="attachment-appilo_367x195 size-appilo_367x195 wp-post-image" alt=""/></div>
                         <div class="text-box">
-                            <h3>泳池邂逅</h3>
-                            <p>AI换脸照片</p>
-                            <div class="meta-info"> </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="single-blog-post">
-                        <div class="img-box">
-                            <img   height="320" src="https://pic.rmb.bdstatic.com/bjh/240322/gallery/6ebee20f82a5334d66a43007d2856f4c5921.jpeg"
-                                   class="attachment-appilo_367x195 size-appilo_367x195 wp-post-image" alt=""/></div>
-                        <div class="text-box">
-                            <h3>眸光璀璨</h3>
-                            <p>AI换脸照片</p>
-                            <div class="meta-info"> </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="single-blog-post">
-                        <div class="img-box">
-                            <img   height="320" src="https://pic.rmb.bdstatic.com/bjh/240322/gallery/e1cc61299aec570d4f3e5789073e2d398725.jpeg"
-                                   class="attachment-appilo_367x195 size-appilo_367x195 wp-post-image" alt=""/></div>
-                        <div class="text-box">
-                            <h3>黄金甲</h3>
-                            <p>AI换脸照片</p>
-                            <div class="meta-info"> </div>
+                            <h3>（AI换脸）海边倩影</h3>
+                            <p>价格：￥1.00元    </p>
+                            <button style="color: #ff9017;border-color:gold">立即购买</button>
+                            <div class="meta-info">产品介绍：上传你的照片，生成换脸照片</div>
                         </div>
                     </div>
                 </div>
